--- a/functions/package.json
+++ b/functions/package.json
@@ -3,10 +3,12 @@
   "main": "index.js",
   "dependencies": {
     "firebase-admin": "^12.0.0",
-    "firebase-functions": "^5.0.1"
+    "firebase-functions": "^5.0.1",
+    "cors": "^2.8.5"
   },
   "engines": {
     "node": "20"
   }
 }
+
 
